--- a/templates/exosuite-artisan.template.yaml
+++ b/templates/exosuite-artisan.template.yaml
@@ -24,7 +24,7 @@ spec:
           resources:
             requests:
               cpu: "500m"
-              memory: "500mi"
+              memory: "500Mi"
             limits:
               cpu: "1000m"
               memory: "1000Mi"
