add redis and postgres limits

--- a/templates/exosuite-postgres.template.yaml
+++ b/templates/exosuite-postgres.template.yaml
@@ -45,7 +45,7 @@ metadata:
 spec:
   storageClassName: local-storage
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: <STORAGE>
