--- a/templates/exosuite-redis.template.yaml
+++ b/templates/exosuite-redis.template.yaml
@@ -72,7 +72,8 @@ spec:
   capacity:
     storage: <STORAGE>
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
+    - ReadOnlyMany
   storageClassName: local-storage
   hostPath:
     path: "/var/www/<CONTAINER>"
