add redis and postgres limits

--- a/templates/exosuite-postgres.template.yaml
+++ b/templates/exosuite-postgres.template.yaml
@@ -32,6 +32,7 @@ spec:
     storage: <STORAGE>
   accessModes:
     - ReadWriteOnce
+    - ReadOnlyMany
   hostPath:
     path: "/var/www/<CONTAINER>"
 ---
