--- a/ftp/staging/vsftpd.yaml
+++ b/ftp/staging/vsftpd.yaml
@@ -31,6 +31,13 @@ spec:
       containers:
         - name: exosuite-vsftpd
           image: fauria/vsftpd
+          resources:
+            requests:
+              cpu: "250m"
+              memory: "250Mi"
+            limits:
+              cpu: "500m"
+              memory: "500Mi"
           ports:
             - containerPort: 21
               protocol: TCP
@@ -70,6 +77,7 @@ spec:
     storage: 50Gi
   accessModes:
     - ReadWriteOnce
+    - ReadOnlyMany
   hostPath:
     path: "/mnt/exosuite/containers/exosuite-vsftpd"
 ---
@@ -84,6 +92,7 @@ spec:
   storageClassName: local-storage
   accessModes:
     - ReadWriteOnce
+    - ReadOnlyMany
   resources:
     requests:
       storage: 50Gi
