--- a/templates/exosuite-nginx.template.yaml
+++ b/templates/exosuite-nginx.template.yaml
@@ -46,19 +46,16 @@ spec:
               memory: "500Mi"
           ports:
             - containerPort: 443
-#          livenessProbe:
-#            httpGet:
-#              scheme: HTTPS
-#              path: /monitoring/alive
-#              port: 443
-#            initialDelaySeconds: 0
-#            failureThreshold: 2
-#          readinessProbe:
-#            httpGet:
-#              scheme: HTTPS
-#              path: /monitoring/alive
-#              port: 443
-#            initialDelaySeconds: 1
+          livenessProbe:
+            httpGet:
+              scheme: HTTPS
+              path: /monitoring/alive
+              port: 443
+          readinessProbe:
+            httpGet:
+              scheme: HTTPS
+              path: /monitoring/alive
+              port: 443
 
       imagePullSecrets:
         - name: <REGISTRY_SECRET>
